DONE: adjusted a word

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p class="section__text__p1">Hello, I'm</p>
                 <h1 class="title" data-aos="fade-right">Bernard Justin Dayao</h1>
                 <p style="text-align: center;">Bachelor of Science in Information Techonology</p>
-                <h3 class="section__text__p2">Student at <span class="words_to_style">Malayan Colleges Laguna</span></h3>
+                <h3 class="section__text__p2">Student at <span class="words_to_style">Mapua Malayan Colleges Laguna</span></h3>
                 <div class="btnProf" data-aos="fade-left">
                     <button class="btnColor0">
                         <a href="https://github.com" target="_blank">Github</a>
